--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -10,11 +10,13 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: starter_code
     steps:
     - uses: actions/checkout@v3
-    - name: configure
-      run: ./configure
+    - name: scrabble
+      run: ./scrabble
     - name: make
       run: make
     - name: make check
