--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,8 +15,8 @@ jobs:
         working-directory: starter_code
     steps:
     - uses: actions/checkout@v3
-    - name: scrabble
-      run: ./scrabble
+    - name: configure
+      run: ./configure
     - name: make
       run: make
     - name: make check
